--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,5 @@
 ﻿cmake_minimum_required(VERSION 3.8)
 project(package_compare)
-
-# Проверка операционной системы
-if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-  # Поиск CXX
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
-  set(CMAKE_PREFIX_PATH "/usr/local" ${CMAKE_PREFIX_PATH})
-endif()
-
-
-if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
-# Путь к vcpkg
-set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};$ENV{VCPKG_ROOT}/installed/x64-windows")
-set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};$ENV{VCPKG_ROOT}/installed/x64-windows/share")
-set(CMAKE_TOOLCHAIN_FILE "C:/Users/Agenteec/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
-set(CMAKE_PREFIX_PATH "C:/Users/Agenteec/vcpkg/installed/x64-windows" ${CMAKE_PREFIX_PATH})
-endif()
-
 # Enable Hot Reload for MSVC compilers if supported.
 if (POLICY CMP0141)
   cmake_policy(SET CMP0141 NEW)
@@ -25,9 +8,6 @@ endif()
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-
-# Поиск библиотеки pthread
-find_package(Threads REQUIRED)
 # Поиск библиотеки jsoncpp
 find_package(jsoncpp CONFIG REQUIRED)
 
@@ -36,23 +16,11 @@ find_package(CURL REQUIRED)
 
 include_directories(${jsoncpp_INCLUDE_DIRS})
 include_directories(${CURL_INCLUDE_DIRS})
-
-
-
-# Создание статической и динамической библиотеки package_compare
-#add_library(package_compare STATIC "src/PackageCompare.cpp" "include/PackageCompare.h")
 add_library(package_compare_shared SHARED "src/PackageCompare.cpp" "include/PackageCompare.h")
-
-#target_link_libraries(package_compare PRIVATE JsonCpp::JsonCpp CURL::libcurl)
-target_link_libraries(package_compare_shared PRIVATE JsonCpp::JsonCpp CURL::libcurl)
-
-# Создание CLI утилиты для библиотеки
+target_link_libraries(package_compare_shared PRIVATE jsoncpp_lib CURL::libcurl)
 add_executable(pkgcompare_cli main.cpp)
-#target_link_libraries(pkgcompare_cli package_compare Threads::Threads)
-target_link_libraries(pkgcompare_cli PRIVATE package_compare_shared Threads::Threads)
+target_link_libraries(pkgcompare_cli PRIVATE package_compare_shared)
 
-# Указание пути к заголовочным файлам
-#target_include_directories(package_compare PRIVATE "${PROJECT_SOURCE_DIR}/include")
 target_include_directories(package_compare_shared PRIVATE "${PROJECT_SOURCE_DIR}/include")
 target_include_directories(pkgcompare_cli PRIVATE "${PROJECT_SOURCE_DIR}/include")
 
